# GraphDBService-Backend

./: .env.sample  .gitignore  README.md  graphdb.sqlite3  pyproject.toml  render.yaml  requirements.txt
app/: settings.py  urls.py  views.py
core/: admin.py
core/migrations/: 0001_initial.py
core/tests/: test_models.py
user/: apps.py  urls.py  views.py
user/tests/: test_user_api.py
